Fix hamburger menu visibility on window resize, adjust acervo main container size, and add clear option to contact form

--- a/css/acervo-styles.css
+++ b/css/acervo-styles.css
@@ -13,6 +13,10 @@
     gap: 0.5rem;
 }
 
+#main-container{
+    width: 100%;
+}
+
 /*Acordion*/
 .accordion {
     background: none;
@@ -102,12 +106,11 @@
     flex-wrap: wrap;
     color: #FCFAF8;
     overflow: hidden;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
 
 .obra-card {
     position: relative;
-    flex: 0.5 0.5 14.5rem;
     width: 14rem;
     margin: 1vw;
     height: 18rem;
